[metadata]
name = kernaux
version = 0.0.0
author = Alex Kotov
author_email = kotovalexarian@gmail.com
description = Binding to libkernaux - auxiliary library for kernel development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tailix/libkernaux/tree/master/bindings/python
project_urls =
    Bug Tracker = https://github.com/tailix/libkernaux/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
