[package]
name = "kernaux"
version = "0.7.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2021"
description = "Safe binding to libkernaux - auxiliary library for kernel development"
readme = true
homepage = "https://github.com/tailix/libkernaux/tree/master/bindings/rust"
repository = "https://github.com/tailix/libkernaux/tree/master/bindings/rust"
license = "MIT"
keywords = ["ffi", "embedded", "bindings"]
categories = ["api-bindings", "embedded", "parsing"]
publish = true

[features]
default = ["cmdline", "ntoa"]
cmdline = ["kernaux-sys/cmdline"]
ntoa = ["kernaux-sys/ntoa"]

[dependencies]
ctor = "0.1.22"

[dependencies.kernaux-sys]
version = "0.7.0"
default-features = false
path = "../kernaux-sys"

[dependencies.libc]
version = "0.2.113"
default-features = false
